tests/fixtures/valid/screensaver.mobileconfig
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>PayloadContent</key>
	<array>
		<dict>
			<key>PayloadDisplayName</key>
			<string>Screensaver Settings</string>
			<key>PayloadIdentifier</key>
			<string>com.example.screensaver</string>
			<key>PayloadType</key>
			<string>com.apple.screensaver</string>
			<key>PayloadUUID</key>
			<string>dddddddd-dddd-dddd-dddd-dddddddddddd</string>
			<key>PayloadVersion</key>
			<integer>1</integer>
			<key>idleTime</key>
			<integer>600</integer>
			<key>askForPassword</key>
			<true/>
			<key>askForPasswordDelay</key>
			<integer>5</integer>
		</dict>
	</array>
	<key>PayloadDisplayName</key>
	<string>Screensaver Configuration</string>
	<key>PayloadIdentifier</key>
	<string>com.example.profile.screensaver</string>
	<key>PayloadOrganization</key>
	<string>Example Organisation</string>
	<key>PayloadType</key>
	<string>Configuration</string>
	<key>PayloadUUID</key>
	<string>eeeeeeee-eeee-eeee-eeee-eeeeeeeeeeee</string>
	<key>PayloadVersion</key>
	<integer>1</integer>
</dict>
</plist>
