tests/fixtures/invalid/wrong-outer-type.mobileconfig
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>PayloadContent</key>
	<array>
		<dict>
			<key>PayloadDisplayName</key>
			<string>Dock Settings</string>
			<key>PayloadIdentifier</key>
			<string>com.example.dock</string>
			<key>PayloadType</key>
			<string>com.apple.dock</string>
			<key>PayloadUUID</key>
			<string>33333333-3333-3333-3333-333333333333</string>
			<key>PayloadVersion</key>
			<integer>1</integer>
		</dict>
	</array>
	<key>PayloadDisplayName</key>
	<string>Wrong Outer Type</string>
	<key>PayloadIdentifier</key>
	<string>com.example.profile.wrongtype</string>
	<key>PayloadType</key>
	<string>NotConfiguration</string>
	<key>PayloadUUID</key>
	<string>44444444-4444-4444-4444-444444444444</string>
	<key>PayloadVersion</key>
	<integer>1</integer>
</dict>
</plist>
